Fix spacing problems

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,6 @@
-*{
-    outline: 1px solid red;
-}
-
 body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 p, ul{
     color:#b8b6b6
@@ -40,6 +37,9 @@ button{
 
 .header-color{
     background-color: #1f2937;
+    width: 100vw; /* Ensures it spans full viewport width */
+  max-width: 100%;
+    
 }
 
 .header-links{
@@ -50,6 +50,7 @@ button{
 }
 
 .blue-container{
+    
     background-color: #1f2937;
     display: flex;
     justify-content: center;
@@ -77,16 +78,30 @@ button{
 
     margin-bottom: 15px;
 }
+.image-container{
+    display: flex;
+    flex-wrap: wrap;
+    
+    gap: 20px;
+    
+    height: 300px;
+    width: 300px;
+
+    max-width: 100%;
+    
+}
 .gray-square{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1;
 
     background-color: gray;
     height: 300px;
-    width: 400px;
+    width: 300px;
 
-    max-width: 400px;
+    max-width: 100%;
+
 }
 
 .placeholder{
@@ -115,6 +130,7 @@ button{
         display: flex;
         justify-content: center;
         gap: 20px;
+        max-width: 100%;
     
 }
 .box{
@@ -215,4 +231,7 @@ button{
 
     background-color: #1f2937;
     height: 100px;
+
+    width: 100vw; /* Ensures it spans full viewport width */
+  max-width: 100%;
 }
